----------------------------------------------------------------------
 OmegaT 6.1.0
----------------------------------------------------------------------
  26 Enhancement
  35 Bug fixes
----------------------------------------------------------------------
6.1.0 vs 6.0.0

  Implemented requests:

  - Download team project with a shallow history
  https://sourceforge.net/p/omegat/feature-requests/1720/

  - ResourceBundle Filter: default not to escape Unicode character
  https://sourceforge.net/p/omegat/feature-requests/1716/

  - Use SLF4J as logging facade framework
  https://sourceforge.net/p/omegat/feature-requests/1710/

  - SVN/Team project should respect access URL specified
  https://sourceforge.net/p/omegat/feature-requests/1707/

  - team: apache HttpClient for git connection
  https://sourceforge.net/p/omegat/feature-requests/1706/

  - Request to add new API to allow plugins/modules to add menu item in requested place
  https://sourceforge.net/p/omegat/feature-requests/1703/

  - Team: SVN support svn+ssh protocol with key authentication
  https://sourceforge.net/p/omegat/feature-requests/1700/

  - Team: SVN: Replacing trilead-ssh2 with Apache sshd
  https://sourceforge.net/p/omegat/feature-requests/1699/

  - Ensure that OmegaT functions properly under Java 21
  https://sourceforge.net/p/omegat/feature-requests/1697/

  - Better error message for omegat.project failure
  https://sourceforge.net/p/omegat/feature-requests/1696/

  - Generate JSON format stastics file when save
  https://sourceforge.net/p/omegat/feature-requests/1695/

  - Generate and compile TXT and JSON file when committing target files
  https://sourceforge.net/p/omegat/feature-requests/1690/

  - Build System: update gradle verison to 7.5.1
  https://sourceforge.net/p/omegat/feature-requests/1691/

  - GUI: automatically adapt colour scheme to OS colour preference on Windows and macOS
  https://sourceforge.net/p/omegat/feature-requests/1675/
