@@ -17,11 +17,24 @@ steps:
         for url in "${jres[@]}"; do
           curl -L -O "$url"
         done
+  - task: Cache@2
+    displayName: 'Cache Gradle'
+    inputs:
+      key: 'gradle | "$(Agent.OS)" | **/build.gradle'
+      restoreKeys: |
+        gradle | "$(Agent.OS)"
+        gradle
+      path: '$(GRADLE_USER_HOME)'
   - script: |
       umask a+w
       mkdir -p build
       chmod -R a+w doc_src
-      $(Build.SourcesDirectory)/gradlew -PenvIsCi -PassetDir=$(System.ArtifactsDirectory)/asset clean build
+    displayName: 'Preparation for build'
+  - task: Gradle@3
+    inputs:
+      tasks: build
+      options: '--build-cache -PenvIsCi -PassetDir=$(System.ArtifactsDirectory)/asset'
+      jdkVersionOption: '1.17'
     displayName: 'Build distribution packages and docs'
   - script: |
       # stop the Gradle daemon to ensure no files are left open (impacting the save cache operation later)
