@@ -178,3 +178,5 @@ nexus-publish = {id = "io.github.gradle-nexus.publish-plugin", version = "2.0.0-
 launch4j = {id = "edu.sc.seis.launch4j", version = "3.0.3"}
 versions = {id = "com.github.ben-manes.versions", version = "0.39.0"}
 sphinx = {id = "tokyo.northside.sphinx", version.ref = "sphinx"}
+jpackage = {id = "org.panteleyev.jpackageplugin", version = "1.5.2"}
+ssh = {id = "org.hidetake.ssh", version = "2.10.1"}
